Minor cleanup using utils
Change-Id: I76ffcbe07ee0ab79f457d72ec0bce25d284e307e